@@ -1,152 +1,0 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
-      lang="en"
-      metal:use-macro="here/main_template/macros/master"
-      i18n:domain="plone">
-  <body>
-    <div metal:fill-slot="main"
-         tal:define="gtool context/portal_groups;
-                     errors options/state/getErrors;
-                     view here/@@collective-sendto;
-                     ismanager view/ismanager;">
-
-        <form action=""
-              method="post"
-              tal:attributes="action string:${context/@@plone_context_state/object_url}/${template/getId}">
-            <input type="hidden" name="form.submitted" value="1" />
-
-            <dl>
-                <dt i18n:translate="label_contacts">Contacts</dt>
-                <dd>
-
-            <div  class="field ArchetypesTextAreaWidget"
-                  id="mailing_list_receipt_field"
-                  tal:define="error errors/receipt | nothing"
-                  tal:attributes="class python:test(error, 'field error', 'field')">
-                <div tal:content="structure error" tal:condition="error"/>
-
-                <tal:repeat repeat="role_users view/users_by_role">
-                <h2><tal:content
-                          i18n:domain="plone"
-                          i18n:translate="" content="role_users/role">Readers
-                    </tal:content>(s)</h2>
-                <div id="manage_readers"
-                     tal:define="localrole role_users/role;
-                                 portal_users role_users/users;">
-
-			      <div class="configlet">
-
-			              <table class="listing" summary="Members Listing"
-			                 tal:condition="portal_users">
-
-			                <tr>
-			                  <th>
-			                    <input class="noborder"
-	                                   type="checkbox"
-	                                   src="select_all_icon.gif"
-	                                   name="fieldname.selectButton"
-	                                   title="Select all items"
-	                                   alt="Select all items"
-	                                   tal:attributes="src string:$portal_url/select_all_icon.gif;
-	                                                   name string:${localrole}.selectButton;
-	                                                   onclick string:toggleSelect(this, '${localrole}:list');"
-                                       i18n:attributes="title label_select_all_items; alt label_select_all_items;"/>
-			                  </th>
-			                  <th i18n:translate="listingheader_group_user_name">Group/User name</th>
-			                  <th i18n:translate="listingheader_email_address">E-mail Address</th>
-			                </tr>
-
-			                  <tal:block tal:repeat="this_user portal_users">
-			                    <tr tal:define="oddrow repeat/this_user/odd"
-			                        tal:attributes="class python:test(oddrow,'odd','even')"
-			                        tal:condition="this_user/email">
-			                        <td class="listingCheckbox">
-			                            <input
-		                                   type="checkbox"
-		                                   class="noborder notify"
-		                                   name="fieldname:list"
-		                                   tal:attributes="value this_user/userid;
-		                                                   name string:${localrole}:list" />
-			                        </td>
-
-        	                        <td>
-			                          <img src="user.png" alt=""
-                                       tal:attributes="src string:$portal_url/user.png;" />
-			                          <a tal:attributes="href this_user/home;
-			                                             class python:not ismanager and 'overlayable' or ''"
-			                             tal:content="this_user/fullname | this_user/userid" />
-			                        </td>
-
-			                        <td>
-			                            <a  href="#"
-			                                tal:define="email this_user/email"
-			                                tal:attributes="href string:mailto:${email}"
-			                                title="Send a mail to this user"
-			                                i18n:attributes="title title_send_mail_to_user;"
-			                                tal:condition="email"
-			                                tal:content="email" />
-			                        </td>
-			                    </tr>
-			                  </tal:block>
-			              </table>
-
-
-			      </div>
-                </div>
-                </tal:repeat>
-            </div>
-                </dd>
-                <dt i18n:translate="label_your_message" i18n:domain="collective.local.sendto">Your Message</dt>
-                <dd>
-            <div class="field ArchetypesTextAreaWidget"
-                 id="mailing_list_email_subject_field"
-                 tal:define="error errors/email_subject | nothing"
-                 tal:attributes="class python:test(error, 'field error', 'field')"
-                >
-                <div tal:content="structure error" tal:condition="error"/>
-                <div><label i18n:domain="collective.local.sendto" i18n:translate="mailing_list_email_subject_help"
-                for="mailing_list_email_subject">The e-mail subject to send</label></div>
-                <input style="color: black" id="mailing_list_email_subject"
-                type="text" size="80" name="email_subject" value=""
-                tal:attributes="value request/email_subject|view/default_subject" />
-
-            </div>
-
-            <div class="field ArchetypesTextAreaWidget"
-                 id="mailing_list_email_body_field"
-                 tal:define="error errors/email_body | nothing"
-                 tal:attributes="class python:test(error, 'field error', 'field')"
-                >
-                <div tal:content="structure error" tal:condition="error"/>
-                <div>
-                    <label i18n:domain="collective.local.sendto" i18n:translate="mailing_list_email_body_help"
-                           for="mailing_list_email_body">The e-mail body to send</label>
-                </div>
-
-      <tal:define
-          define="inputname string:email_body;
-                  inputvalue request/email_body|view/default_body;
-                  force_wysiwyg string:1">
-        <div metal:use-macro="here/wysiwyg_support/macros/wysiwygEditorBox"/>
-      </tal:define>
-
-            </div>
-
-            <input class="context"
-                   type="submit"
-                   name="form.button.Send"
-                   value="send e-mail to selected contacts"
-                   i18n:domain="collective.local.sendto"
-                   i18n:attributes="value label_send_email_to_selected_contacts;" />
-               </dd>
-            </dl>
-
-        </form>
-
-    <script type="text/javascript">
-    jq(document).ready(function(){
-        jq('.configlet .overlayable').prepOverlay({subtype: 'ajax'});
-    })
-    </script>
-    </div>
-</body>
-</html>
