@@ -1,15 +1,0 @@
-[default]
-title = Mailing list
-cache =
-
-[security]
-Access contents information = 1:Manager,Editor,Reader,Reviewer
-
-[validators]
-validators..Send = collective_sendto_validate
-validators =
-
-[actions]
-action.failure.. = traverse_to:string:collective_sendto
-action.success..Send = traverse_to:string:collective_sendto_send
-action.success.. = traverse_to:string:collective_sendto
