@@ -1,3 +1,0 @@
-[actions]
-action.failure = traverse_to:string:collective_sendto
-action.success = redirect_to_action:string:view
